feat: complete i18n implementation with dynamic product names
- Implement full Spanish/English language switching with ngx-translate
- Add ProductService for fetching translated product names in cart
- Translate all pages: Home, Cart, Checkout, Product Search, Product Detail
- Add Order Confirmation and Payment Error page translations
- Create Help page with FAQ sections
- Add MercadoPago test codes table in Checkout
- Update language switcher component styling
- Add language interceptor for API requests
- Fix ESLint errors (unused vars, empty blocks, accessibility)

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -27,8 +27,8 @@
     "MIN_PRICE": "Min Price",
     "MAX_PRICE": "Max Price",
     "ACTIVE_FILTERS": "Active Filters",
-    "RESULTS_FOR": "Results for \"{{query}}\"",
-    "ALL_PRODUCTS": "All Products",
+    "RESULTS_FOR": "Results for",
+    "ALL_PRODUCTS": "All products",
     "FILTER_PRICE": "Price",
     "FILTER_BRAND": "Brand",
     "FILTER_AVAILABILITY": "Availability",
@@ -37,7 +37,23 @@
     "ON_SALE": "On Sale",
     "NO_RESULTS_FOR": "No results found for \"{{query}}\"",
     "TRY_DIFFERENT_TERMS": "Try different search terms",
-    "SHOWING_X_OF_Y": "Showing {{count}} of {{total}} products"
+    "SHOWING_X_OF_Y": "Showing {{count}} of {{total}} products",
+    "SORT_BY_LABEL": "Sort by:",
+    "BEST_SELLER": "Best Seller",
+    "SPONSORED": "Sponsored",
+    "AMAZONS_CHOICE": "Amazon's Choice",
+    "FREE_DELIVERY_TOMORROW": "FREE delivery Tomorrow",
+    "DELIVERY_2_3_DAYS": "Delivery in 2-3 days",
+    "IN_STOCK_QUANTITY": "In Stock ({{quantity}} available)",
+    "OUT_OF_STOCK": "Out of Stock",
+    "ADD_TO_CART": "Add to Cart",
+    "LOADING_MORE": "Loading more products...",
+    "SHOWING_RESULTS": "Showing {{count}} of {{total}} results",
+    "SCROLL_HINT": "Scroll down to see more products",
+    "NO_RESULTS_TITLE": "No results found",
+    "NO_RESULTS_MESSAGE": "Try different search terms or adjust the filters.",
+    "ERROR_TITLE": "Error loading products",
+    "RETRY": "Retry"
   },
   "SORT_OPTIONS": {
     "RELEVANCE": "Relevance",
@@ -58,7 +74,27 @@
     "PRICE": "Price",
     "SKU": "SKU",
     "BRAND": "Brand",
-    "LOAD_ERROR": "Could not load product"
+    "LOAD_ERROR": "Could not load product",
+    "VIEW_ALL": "View all",
+    "PREVIOUS": "Previous",
+    "NEXT": "Next",
+    "FEATURED": "Featured",
+    "NEW": "New",
+    "SAVE": "Save",
+    "NO_PRODUCTS": "No products available",
+    "PRODUCTS": "products",
+    "PRODUCTS_COUNT": "{{count}} products",
+    "PRODUCTS_COUNT_K": "{{count}}k+ products",
+    "VIEW_PRODUCTS": "View products",
+    "NO_CATEGORIES": "No featured categories available",
+    "LOADING": "Loading product...",
+    "ERROR_LOADING": "Error loading product",
+    "RETRY": "Retry",
+    "GO_BACK": "Go Back",
+    "BACK": "Back",
+    "DESCRIPTION": "Product Description",
+    "PRICE_LABEL": "Price:",
+    "ADD": "Add"
   },
   "PAGINATION": {
     "PREVIOUS": "Previous",
@@ -72,7 +108,20 @@
     "CART": "Cart",
     "ACCOUNT": "Account",
     "LOGOUT": "Logout",
-    "LOGIN": "Login"
+    "LOGIN": "Login",
+    "GREETING": "Hello",
+    "GREETING_USER": "Hello, {{name}}",
+    "ACCOUNT_LISTS": "Account & Lists",
+    "MY_PROFILE": "My Profile",
+    "CATEGORIES": "Categories",
+    "LOADING_CATEGORIES": "Loading categories...",
+    "VIEW_ALL_CATEGORIES": "View all categories",
+    "DEALS": "Today's Deals",
+    "BESTSELLERS": "Best Sellers",
+    "FEATURED": "Featured Products",
+    "NEW_ARRIVALS": "New Arrivals",
+    "TOP_RATED": "Top Rated",
+    "HELP": "Help"
   },
   "THEME": {
     "LIGHT": "Light",
@@ -127,6 +176,201 @@
     "PRODUCT_ADDED": "Product added to cart",
     "VIEW_CART": "View Cart",
     "OUT_OF_STOCK": "This product is out of stock",
-    "CLOSE": "Close"
+    "CLOSE": "Close",
+    "TITLE": "Shopping Cart",
+    "CLEAR_CART": "Clear cart",
+    "EMPTY_TITLE": "Your cart is empty",
+    "EMPTY_MESSAGE": "Add products to start shopping",
+    "CONTINUE_SHOPPING": "Continue shopping",
+    "ITEMS": "Items",
+    "IN_STOCK": "In stock",
+    "OUT_OF_STOCK_LABEL": "Out of stock",
+    "UNIT_PRICE": "each",
+    "REMOVE_ITEM": "Remove item",
+    "ORDER_SUMMARY": "Order Summary",
+    "SUBTOTAL": "Subtotal ({{count}} items):",
+    "SHIPPING": "Shipping:",
+    "FREE": "FREE",
+    "TOTAL": "Total:",
+    "PROCEED_TO_CHECKOUT": "Proceed to checkout",
+    "SECURE_PAYMENT": "Secure and encrypted payment",
+    "ITEM_REMOVED": "\"{{name}}\" removed from cart",
+    "UNDO": "Undo",
+    "CART_CLEARED": "Cart cleared",
+    "CONFIRM_CLEAR": "Are you sure you want to empty the cart?",
+    "LOGIN_REQUIRED": "You must log in to proceed to checkout"
+  },
+  "FOOTER": {
+    "ABOUT_US_TITLE": "Get to Know Us",
+    "ABOUT_US": "About Us",
+    "CAREERS": "Careers",
+    "INVESTOR_RELATIONS": "Investor Relations",
+    "EARN_MONEY_TITLE": "Make Money with Us",
+    "SELL_ON_ECOMMERCE": "Sell on ECommerce",
+    "AFFILIATE_PROGRAM": "Affiliate Program",
+    "ADVERTISE_PRODUCTS": "Advertise Your Products",
+    "HELP_TITLE": "Let Us Help You",
+    "YOUR_ACCOUNT": "Your Account",
+    "YOUR_ORDERS": "Your Orders",
+    "RETURNS_REPLACEMENTS": "Returns & Replacements",
+    "PAYMENT_METHODS_TITLE": "Payment Methods",
+    "CREDIT_CARDS": "Credit Cards",
+    "DEBIT_CARDS": "Debit Cards",
+    "BANK_TRANSFER": "Bank Transfer",
+    "COPYRIGHT": "© 2025 ECommerce - All rights reserved"
+  },
+  "HOME": {
+    "DEALS_TITLE": "Daily Deals",
+    "DEALS_SUBTITLE": "Updated every minute",
+    "BESTSELLERS_TITLE": "Best Sellers",
+    "FEATURED_TITLE": "Featured Products",
+    "NEW_ARRIVALS_TITLE": "New Arrivals",
+    "TOP_RATED_TITLE": "Top Rated",
+    "TOP_RATED_SUBTITLE": "4+ stars",
+    "CATEGORIES_TITLE": "Featured Categories",
+    "CATEGORIES_SUBTITLE": "Explore our most popular categories",
+    "ERROR_TITLE": "Oops! Something went wrong",
+    "LOADING": "Loading products...",
+    "RETRY": "Retry",
+    "CLEAR_CACHE": "Clear Cache & Reload"
+  },
+  "CHECKOUT": {
+    "STEP_SHIPPING": "Shipping address",
+    "STEP_PAYMENT": "Payment method",
+    "STEP_REVIEW": "Review order",
+    "SHIPPING_ADDRESS": "Shipping address",
+    "FULL_NAME": "Full name",
+    "PHONE": "Phone",
+    "ADDRESS_LINE_1": "Address line 1",
+    "ADDRESS_LINE_2": "Address line 2",
+    "CITY": "City",
+    "STATE_PROVINCE": "State/Province",
+    "POSTAL_CODE": "Postal code",
+    "COUNTRY": "Country",
+    "CONTINUE_TO_PAYMENT": "Continue to payment",
+    "ORDER_SUMMARY": "Order summary",
+    "ITEMS": "Items",
+    "SHIPPING": "Shipping",
+    "FREE": "FREE",
+    "ESTIMATED_TAX": "Estimated tax",
+    "ORDER_TOTAL": "Order total",
+    "SECURE_PAYMENT": "Secure and encrypted payment",
+    "FIELD_REQUIRED": "This field is required",
+    "CHANGE": "Change",
+    "PAYMENT_METHOD": "Payment method",
+    "SECURE_TRANSACTION": "Secure and encrypted transaction with MercadoPago",
+    "DEV_MODE": "Development Mode",
+    "DEV_MODE_MESSAGE": "MercadoPago test card data has been pre-loaded for testing purposes.",
+    "DEV_MODE_CARDHOLDER_NAME": "Cardholder name to test:",
+    "DEV_CODE_APRO": "Approves the operation",
+    "DEV_CODE_CALL": "Rejected - Call to authorize",
+    "DEV_CODE_FUND": "Rejected - Insufficient amount",
+    "DEV_CODE_SECU": "Rejected - Invalid security code",
+    "DEV_CODE_EXPI": "Rejected - Invalid expiration date",
+    "DEV_CODE_FORM": "Rejected - Form error",
+    "DEV_CODE_OTHE": "Rejected - General error",
+    "INITIALIZING_PAYMENT": "Initializing payment service...",
+    "CARD_INFO": "Card information",
+    "CARD_NUMBER": "Card number",
+    "CARDHOLDER_NAME": "Cardholder name",
+    "EXPIRY_MONTH": "Month (MM)",
+    "EXPIRY_YEAR": "Year (YY)",
+    "CVV": "CVV",
+    "CVV_TOOLTIP": "3 or 4 digit security code on the back of the card",
+    "CARDHOLDER_ID": "Cardholder identification",
+    "DOCUMENT_TYPE": "Document type",
+    "DOCUMENT_NUMBER": "Document number",
+    "BILLING_ADDRESS": "Billing address",
+    "USE_SHIPPING_ADDRESS": "Use same shipping address",
+    "SECURE_DATA_MESSAGE": "Your card data is securely processed by MercadoPago. We never store sensitive card information.",
+    "CONTINUE_TO_REVIEW": "Continue to review",
+    "CARD_NUMBER_INVALID": "Invalid card number",
+    "INVALID_MONTH": "Invalid month",
+    "INVALID_YEAR": "Invalid year",
+    "INVALID_CVV": "Invalid CVV",
+    "SAME_AS_SHIPPING": "Same as shipping address",
+    "CARD_ENDING_IN": "Card ending in",
+    "SECURE_PAYMENT_WITH_MP": "Secure payment with MercadoPago",
+    "ERROR_INITIALIZING_PAYMENT": "Error initializing payment service",
+    "COMPLETE_PAYMENT_DETAILS": "Please complete all payment details",
+    "COMPLETE_BILLING_ADDRESS": "Please complete the billing address",
+    "SESSION_EXPIRED": "Session expired. Please log in again.",
+    "ERROR_PROCESSING_ORDER": "An error occurred while processing your order. Please try again.",
+    "PLACE_ORDER": "Place order",
+    "PROCESSING_ORDER": "Processing order..."
+  },
+  "ORDER_CONFIRMATION": {
+    "SUCCESS_TITLE": "Order placed successfully!",
+    "SUCCESS_MESSAGE": "Thank you for your purchase. Your order has been confirmed.",
+    "ORDER_NUMBER": "Order number:",
+    "DATE": "Date:",
+    "TOTAL": "Total:",
+    "SHIPPING_ADDRESS": "Shipping address",
+    "ORDER_ITEMS": "Order items",
+    "QUANTITY": "Quantity:",
+    "CONTINUE_SHOPPING": "Continue shopping",
+    "EMAIL_CONFIRMATION": "You will receive a confirmation email with your order details."
+  },
+  "PAYMENT_ERROR": {
+    "TITLE": "Payment Failed!",
+    "SUBTITLE": "We couldn't process your payment method",
+    "ACTION_REQUIRED": "Action Required",
+    "EXPIRATION_WARNING": "Your order will expire in 24 hours if you don't complete the payment. Retry now to continue with your purchase.",
+    "PAYMENT_DETAILS": "Payment Details",
+    "ORDER_NUMBER": "Order Number",
+    "ATTEMPT_DATE": "Attempt Date",
+    "AMOUNT": "Amount",
+    "PAYMENT_METHOD": "Payment Method",
+    "REJECTION_REASON": "Rejection Reason",
+    "RETRY_PAYMENT": "Retry Payment",
+    "VIEW_ORDER": "View Order",
+    "NEED_HELP": "Need Help?",
+    "HELP_TEXT": "If you continue having problems, you can:",
+    "HELP_OPTION_1": "Try a different payment method",
+    "HELP_OPTION_2": "Contact your bank",
+    "HELP_OPTION_3": "Contact our support team",
+    "FOOTER_TEXT": "We're here to help. If you have questions, don't hesitate to contact us.",
+    "CONTACT_SUPPORT": "Contact Support",
+    "MY_ORDERS": "My Orders",
+    "PAYMENT_METHODS": "Payment Methods"
+  },
+  "HELP": {
+    "TITLE": "Help Center",
+    "SUBTITLE": "How can we help you?",
+    "ORDERS_TITLE": "Orders & Purchases",
+    "VIEW_CART": "View my cart",
+    "TRACK_ORDER": "Track my order",
+    "CANCEL_ORDER": "Cancel an order",
+    "RETURNS_REFUNDS": "Returns and refunds",
+    "PAYMENTS_TITLE": "Payments & Billing",
+    "PAYMENT_METHODS": "Accepted payment methods",
+    "PAYMENT_ISSUES": "Payment issues",
+    "BILLING": "Billing",
+    "COUPONS_DISCOUNTS": "Coupons and discounts",
+    "SHIPPING_TITLE": "Shipping & Delivery",
+    "DELIVERY_TIMES": "Delivery times",
+    "SHIPPING_COSTS": "Shipping costs",
+    "FREE_SHIPPING": "Free shipping",
+    "CHANGE_ADDRESS": "Change shipping address",
+    "ACCOUNT_TITLE": "My Account",
+    "MANAGE_ACCOUNT": "Manage my account",
+    "CHANGE_PASSWORD": "Change password",
+    "NOTIFICATION_PREFERENCES": "Notification preferences",
+    "DELETE_ACCOUNT": "Delete my account",
+    "SECURITY_TITLE": "Security & Privacy",
+    "PRIVACY_POLICY": "Privacy policy",
+    "TERMS_CONDITIONS": "Terms and conditions",
+    "PAYMENT_SECURITY": "Payment security",
+    "REPORT_ISSUE": "Report an issue",
+    "FAQ_TITLE": "Frequently Asked Questions",
+    "HOW_TO_BUY": "How to buy?",
+    "HOW_TO_TRACK": "How to track my order?",
+    "MODIFY_ORDER": "Can I modify my order?",
+    "HOW_TO_RETURN": "How to return a product?",
+    "NEED_MORE_HELP": "Need more help?",
+    "SUPPORT_AVAILABLE": "Our support team is available to help you",
+    "SEND_EMAIL": "Send an email",
+    "LIVE_CHAT": "Live chat",
+    "CALL_SUPPORT": "Call support"
   }
 }
