--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -27,8 +27,8 @@
     "MIN_PRICE": "Precio Mínimo",
     "MAX_PRICE": "Precio Máximo",
     "ACTIVE_FILTERS": "Filtros Activos",
-    "RESULTS_FOR": "Resultados para \"{{query}}\"",
-    "ALL_PRODUCTS": "Todos los Productos",
+    "RESULTS_FOR": "Resultados para",
+    "ALL_PRODUCTS": "Todos los productos",
     "FILTER_PRICE": "Precio",
     "FILTER_BRAND": "Marca",
     "FILTER_AVAILABILITY": "Disponibilidad",
@@ -37,7 +37,23 @@
     "ON_SALE": "En Oferta",
     "NO_RESULTS_FOR": "No encontramos resultados para \"{{query}}\"",
     "TRY_DIFFERENT_TERMS": "Intenta con otros términos de búsqueda",
-    "SHOWING_X_OF_Y": "Mostrando {{count}} de {{total}} productos"
+    "SHOWING_X_OF_Y": "Mostrando {{count}} de {{total}} productos",
+    "SORT_BY_LABEL": "Ordenar por:",
+    "BEST_SELLER": "Best Seller",
+    "SPONSORED": "Sponsored",
+    "AMAZONS_CHOICE": "Amazon's Choice",
+    "FREE_DELIVERY_TOMORROW": "Entrega GRATIS Mañana",
+    "DELIVERY_2_3_DAYS": "Entrega en 2-3 días",
+    "IN_STOCK_QUANTITY": "En Stock ({{quantity}} disponibles)",
+    "OUT_OF_STOCK": "Agotado",
+    "ADD_TO_CART": "Agregar al Carrito",
+    "LOADING_MORE": "Cargando más productos...",
+    "SHOWING_RESULTS": "Mostrando {{count}} de {{total}} resultados",
+    "SCROLL_HINT": "Desplázate hacia abajo para ver más productos",
+    "NO_RESULTS_TITLE": "No se encontraron resultados",
+    "NO_RESULTS_MESSAGE": "Intenta con otros términos de búsqueda o ajusta los filtros.",
+    "ERROR_TITLE": "Error al cargar los productos",
+    "RETRY": "Reintentar"
   },
   "SORT_OPTIONS": {
     "RELEVANCE": "Relevancia",
@@ -58,7 +74,27 @@
     "PRICE": "Precio",
     "SKU": "SKU",
     "BRAND": "Marca",
-    "LOAD_ERROR": "No se pudo cargar el producto"
+    "LOAD_ERROR": "No se pudo cargar el producto",
+    "VIEW_ALL": "Ver todos",
+    "PREVIOUS": "Anterior",
+    "NEXT": "Siguiente",
+    "FEATURED": "Destacado",
+    "NEW": "Nuevo",
+    "SAVE": "Ahorrás",
+    "NO_PRODUCTS": "No hay productos disponibles",
+    "PRODUCTS": "productos",
+    "PRODUCTS_COUNT": "{{count}} productos",
+    "PRODUCTS_COUNT_K": "{{count}}k+ productos",
+    "VIEW_PRODUCTS": "Ver productos",
+    "NO_CATEGORIES": "No hay categorías destacadas disponibles",
+    "LOADING": "Cargando producto...",
+    "ERROR_LOADING": "Error al cargar el producto",
+    "RETRY": "Reintentar",
+    "GO_BACK": "Volver",
+    "BACK": "Volver",
+    "DESCRIPTION": "Descripción del producto",
+    "PRICE_LABEL": "Precio:",
+    "ADD": "Agregar"
   },
   "PAGINATION": {
     "PREVIOUS": "Anterior",
@@ -72,7 +108,20 @@
     "CART": "Carrito",
     "ACCOUNT": "Cuenta",
     "LOGOUT": "Cerrar Sesión",
-    "LOGIN": "Iniciar Sesión"
+    "LOGIN": "Iniciar Sesión",
+    "GREETING": "Hola",
+    "GREETING_USER": "Hola, {{name}}",
+    "ACCOUNT_LISTS": "Cuenta y Listas",
+    "MY_PROFILE": "Mi Perfil",
+    "CATEGORIES": "Categorías",
+    "LOADING_CATEGORIES": "Cargando categorías...",
+    "VIEW_ALL_CATEGORIES": "Ver todas las categorías",
+    "DEALS": "Ofertas del Día",
+    "BESTSELLERS": "Los Más Vendidos",
+    "FEATURED": "Productos Destacados",
+    "NEW_ARRIVALS": "Recién Llegados",
+    "TOP_RATED": "Mejor Valorados",
+    "HELP": "Ayuda"
   },
   "THEME": {
     "LIGHT": "Claro",
@@ -127,6 +176,201 @@
     "PRODUCT_ADDED": "Producto agregado al carrito",
     "VIEW_CART": "Ver Carrito",
     "OUT_OF_STOCK": "Este producto está agotado",
-    "CLOSE": "Cerrar"
+    "CLOSE": "Cerrar",
+    "TITLE": "Carrito de Compras",
+    "CLEAR_CART": "Vaciar carrito",
+    "EMPTY_TITLE": "Tu carrito está vacío",
+    "EMPTY_MESSAGE": "Agrega productos para comenzar a comprar",
+    "CONTINUE_SHOPPING": "Continuar comprando",
+    "ITEMS": "Artículos",
+    "IN_STOCK": "En stock",
+    "OUT_OF_STOCK_LABEL": "Agotado",
+    "UNIT_PRICE": "c/u",
+    "REMOVE_ITEM": "Remover item",
+    "ORDER_SUMMARY": "Resumen del pedido",
+    "SUBTOTAL": "Subtotal ({{count}} artículos):",
+    "SHIPPING": "Envío:",
+    "FREE": "GRATIS",
+    "TOTAL": "Total:",
+    "PROCEED_TO_CHECKOUT": "Proceder al pago",
+    "SECURE_PAYMENT": "Pago seguro y encriptado",
+    "ITEM_REMOVED": "\"{{name}}\" removido del carrito",
+    "UNDO": "Deshacer",
+    "CART_CLEARED": "Carrito vaciado",
+    "CONFIRM_CLEAR": "¿Estás seguro de que deseas vaciar el carrito?",
+    "LOGIN_REQUIRED": "Debe iniciar sesión para proceder al pago"
+  },
+  "FOOTER": {
+    "ABOUT_US_TITLE": "Conócenos",
+    "ABOUT_US": "Sobre Nosotros",
+    "CAREERS": "Carreras",
+    "INVESTOR_RELATIONS": "Relaciones con Inversionistas",
+    "EARN_MONEY_TITLE": "Gana Dinero con Nosotros",
+    "SELL_ON_ECOMMERCE": "Vende en ECommerce",
+    "AFFILIATE_PROGRAM": "Programa de Afiliados",
+    "ADVERTISE_PRODUCTS": "Anuncia tus Productos",
+    "HELP_TITLE": "Podemos Ayudarte",
+    "YOUR_ACCOUNT": "Tu Cuenta",
+    "YOUR_ORDERS": "Tus Pedidos",
+    "RETURNS_REPLACEMENTS": "Devoluciones y Reemplazos",
+    "PAYMENT_METHODS_TITLE": "Métodos de Pago",
+    "CREDIT_CARDS": "Tarjetas de Crédito",
+    "DEBIT_CARDS": "Tarjetas de Débito",
+    "BANK_TRANSFER": "Transferencia Bancaria",
+    "COPYRIGHT": "© 2025 ECommerce - Todos los derechos reservados"
+  },
+  "HOME": {
+    "DEALS_TITLE": "Ofertas del Día",
+    "DEALS_SUBTITLE": "Actualizadas cada minuto",
+    "BESTSELLERS_TITLE": "Los Más Vendidos",
+    "FEATURED_TITLE": "Productos Destacados",
+    "NEW_ARRIVALS_TITLE": "Recién Llegados",
+    "TOP_RATED_TITLE": "Mejor Valorados",
+    "TOP_RATED_SUBTITLE": "4+ estrellas",
+    "CATEGORIES_TITLE": "Categorías Destacadas",
+    "CATEGORIES_SUBTITLE": "Explora nuestras categorías más populares",
+    "ERROR_TITLE": "Oops! Algo salió mal",
+    "LOADING": "Cargando productos...",
+    "RETRY": "Reintentar",
+    "CLEAR_CACHE": "Clear Cache & Reload"
+  },
+  "CHECKOUT": {
+    "STEP_SHIPPING": "Dirección de envío",
+    "STEP_PAYMENT": "Método de pago",
+    "STEP_REVIEW": "Revisar pedido",
+    "SHIPPING_ADDRESS": "Dirección de envío",
+    "FULL_NAME": "Nombre completo",
+    "PHONE": "Teléfono",
+    "ADDRESS_LINE_1": "Dirección línea 1",
+    "ADDRESS_LINE_2": "Dirección línea 2",
+    "CITY": "Ciudad",
+    "STATE_PROVINCE": "Estado/Provincia",
+    "POSTAL_CODE": "Código postal",
+    "COUNTRY": "País",
+    "CONTINUE_TO_PAYMENT": "Continuar al pago",
+    "ORDER_SUMMARY": "Resumen del pedido",
+    "ITEMS": "Artículos",
+    "SHIPPING": "Envío",
+    "FREE": "GRATIS",
+    "ESTIMATED_TAX": "Impuesto estimado",
+    "ORDER_TOTAL": "Total del pedido",
+    "SECURE_PAYMENT": "Pago seguro y encriptado",
+    "FIELD_REQUIRED": "Este campo es requerido",
+    "CHANGE": "Cambiar",
+    "PAYMENT_METHOD": "Método de pago",
+    "SECURE_TRANSACTION": "Transacción segura y encriptada con MercadoPago",
+    "DEV_MODE": "Modo Desarrollo",
+    "DEV_MODE_MESSAGE": "Los datos de la tarjeta de prueba de MercadoPago han sido pre-cargados para facilitar las pruebas.",
+    "DEV_MODE_CARDHOLDER_NAME": "Nombre del titular para probar:",
+    "DEV_CODE_APRO": "Aprueba la operación",
+    "DEV_CODE_CALL": "Rechazado - Llamar para autorizar",
+    "DEV_CODE_FUND": "Rechazado - Monto insuficiente",
+    "DEV_CODE_SECU": "Rechazado - Código de seguridad inválido",
+    "DEV_CODE_EXPI": "Rechazado - Fecha de expiración inválida",
+    "DEV_CODE_FORM": "Rechazado - Error en formulario",
+    "DEV_CODE_OTHE": "Rechazado - Error general",
+    "INITIALIZING_PAYMENT": "Inicializando servicio de pagos...",
+    "CARD_INFO": "Información de la tarjeta",
+    "CARD_NUMBER": "Número de tarjeta",
+    "CARDHOLDER_NAME": "Nombre del titular",
+    "EXPIRY_MONTH": "Mes (MM)",
+    "EXPIRY_YEAR": "Año (YY)",
+    "CVV": "CVV",
+    "CVV_TOOLTIP": "Código de seguridad de 3 o 4 dígitos al reverso de la tarjeta",
+    "CARDHOLDER_ID": "Identificación del titular",
+    "DOCUMENT_TYPE": "Tipo de documento",
+    "DOCUMENT_NUMBER": "Número de documento",
+    "BILLING_ADDRESS": "Dirección de facturación",
+    "USE_SHIPPING_ADDRESS": "Usar la misma dirección de envío",
+    "SECURE_DATA_MESSAGE": "Sus datos de tarjeta son procesados de forma segura por MercadoPago. Nunca almacenamos información sensible de su tarjeta.",
+    "CONTINUE_TO_REVIEW": "Continuar a revisión",
+    "CARD_NUMBER_INVALID": "Número de tarjeta inválido",
+    "INVALID_MONTH": "Mes inválido",
+    "INVALID_YEAR": "Año inválido",
+    "INVALID_CVV": "CVV inválido",
+    "SAME_AS_SHIPPING": "Misma dirección que el envío",
+    "CARD_ENDING_IN": "Tarjeta terminando en",
+    "SECURE_PAYMENT_WITH_MP": "Pago seguro con MercadoPago",
+    "ERROR_INITIALIZING_PAYMENT": "Error al inicializar el servicio de pagos",
+    "COMPLETE_PAYMENT_DETAILS": "Por favor complete todos los detalles de pago",
+    "COMPLETE_BILLING_ADDRESS": "Por favor complete la dirección de facturación",
+    "SESSION_EXPIRED": "Sesión expirada. Por favor inicie sesión nuevamente.",
+    "ERROR_PROCESSING_ORDER": "Ocurrió un error al procesar su pedido. Por favor intente nuevamente.",
+    "PLACE_ORDER": "Realizar pedido",
+    "PROCESSING_ORDER": "Procesando pedido..."
+  },
+  "ORDER_CONFIRMATION": {
+    "SUCCESS_TITLE": "¡Pedido realizado con éxito!",
+    "SUCCESS_MESSAGE": "Gracias por tu compra. Tu pedido ha sido confirmado.",
+    "ORDER_NUMBER": "Número de pedido:",
+    "DATE": "Fecha:",
+    "TOTAL": "Total:",
+    "SHIPPING_ADDRESS": "Dirección de envío",
+    "ORDER_ITEMS": "Artículos del pedido",
+    "QUANTITY": "Cantidad:",
+    "CONTINUE_SHOPPING": "Continuar comprando",
+    "EMAIL_CONFIRMATION": "Recibirás un correo electrónico de confirmación con los detalles de tu pedido."
+  },
+  "PAYMENT_ERROR": {
+    "TITLE": "¡Pago Fallido!",
+    "SUBTITLE": "No pudimos procesar tu método de pago",
+    "ACTION_REQUIRED": "Acción Requerida",
+    "EXPIRATION_WARNING": "Tu pedido expirará en 24 horas si no completas el pago. Reintentar ahora para continuar con tu compra.",
+    "PAYMENT_DETAILS": "Detalles del Pago",
+    "ORDER_NUMBER": "Número de Pedido",
+    "ATTEMPT_DATE": "Fecha del Intento",
+    "AMOUNT": "Monto",
+    "PAYMENT_METHOD": "Método de Pago",
+    "REJECTION_REASON": "Motivo del Rechazo",
+    "RETRY_PAYMENT": "Reintentar Pago",
+    "VIEW_ORDER": "Ver Pedido",
+    "NEED_HELP": "¿Necesitas Ayuda?",
+    "HELP_TEXT": "Si continúas teniendo problemas, puedes:",
+    "HELP_OPTION_1": "Intentar con otro método de pago",
+    "HELP_OPTION_2": "Contactar con tu entidad bancaria",
+    "HELP_OPTION_3": "Comunicarte con nuestro equipo de soporte",
+    "FOOTER_TEXT": "Estamos aquí para ayudarte. Si tienes preguntas, no dudes en contactarnos.",
+    "CONTACT_SUPPORT": "Contactar Soporte",
+    "MY_ORDERS": "Mis Órdenes",
+    "PAYMENT_METHODS": "Métodos de Pago"
+  },
+  "HELP": {
+    "TITLE": "Centro de Ayuda",
+    "SUBTITLE": "¿En qué podemos ayudarte?",
+    "ORDERS_TITLE": "Pedidos y Compras",
+    "VIEW_CART": "Ver mi carrito",
+    "TRACK_ORDER": "Rastrear mi pedido",
+    "CANCEL_ORDER": "Cancelar un pedido",
+    "RETURNS_REFUNDS": "Devoluciones y reembolsos",
+    "PAYMENTS_TITLE": "Pagos y Facturación",
+    "PAYMENT_METHODS": "Métodos de pago aceptados",
+    "PAYMENT_ISSUES": "Problemas con el pago",
+    "BILLING": "Facturación",
+    "COUPONS_DISCOUNTS": "Cupones y descuentos",
+    "SHIPPING_TITLE": "Envíos y Entregas",
+    "DELIVERY_TIMES": "Tiempos de entrega",
+    "SHIPPING_COSTS": "Costos de envío",
+    "FREE_SHIPPING": "Envío gratis",
+    "CHANGE_ADDRESS": "Cambiar dirección de envío",
+    "ACCOUNT_TITLE": "Mi Cuenta",
+    "MANAGE_ACCOUNT": "Gestionar mi cuenta",
+    "CHANGE_PASSWORD": "Cambiar contraseña",
+    "NOTIFICATION_PREFERENCES": "Preferencias de notificaciones",
+    "DELETE_ACCOUNT": "Eliminar mi cuenta",
+    "SECURITY_TITLE": "Seguridad y Privacidad",
+    "PRIVACY_POLICY": "Política de privacidad",
+    "TERMS_CONDITIONS": "Términos y condiciones",
+    "PAYMENT_SECURITY": "Seguridad de pagos",
+    "REPORT_ISSUE": "Reportar un problema",
+    "FAQ_TITLE": "Preguntas Frecuentes",
+    "HOW_TO_BUY": "¿Cómo comprar?",
+    "HOW_TO_TRACK": "¿Cómo rastrear mi pedido?",
+    "MODIFY_ORDER": "¿Puedo modificar mi pedido?",
+    "HOW_TO_RETURN": "¿Cómo devolver un producto?",
+    "NEED_MORE_HELP": "¿Necesitas más ayuda?",
+    "SUPPORT_AVAILABLE": "Nuestro equipo de soporte está disponible para ayudarte",
+    "SEND_EMAIL": "Enviar un correo",
+    "LIVE_CHAT": "Chat en vivo",
+    "CALL_SUPPORT": "Llamar al soporte"
   }
 }
