feat: extend mobile breakpoint to 960px for better tablet support
- Update breakpoints from 599px to 959px in header components
- Mobile drawer now shows on tablets (< 960px)
- Desktop header displays only on screens >= 960px
- Fixes header overflow issues on medium-sized screens
- Add mobile drawer with navigation, categories, settings
- Improve language selector in drawer to match theme style
- Fix accessibility issues in drawer navigation

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -121,7 +121,9 @@
     "FEATURED": "Featured Products",
     "NEW_ARRIVALS": "New Arrivals",
     "TOP_RATED": "Top Rated",
-    "HELP": "Help"
+    "HELP": "Help",
+    "SETTINGS": "Settings",
+    "LANGUAGE": "Language"
   },
   "THEME": {
     "LIGHT": "Light",
